--- a/bracelet_frontend/package.json
+++ b/bracelet_frontend/package.json
@@ -14,7 +14,9 @@
     "bootstrap": "^5.3.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "reactstrap": "^9.2.2"
+    "react-router": "^7.9.3",
+    "reactstrap": "^9.2.2",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
