--- a/bracelet_frontend/package.json
+++ b/bracelet_frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.3",
     "reactstrap": "^9.2.2",
     "styled-components": "^6.1.19"
